<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_menus"
    tools:context="de.dhkarlsruhe.it.sheeshapp.sheeshapp.guest.LoginActivityGuest">

    <TextView
        android:id="@+id/tvGuestLogin"
        style="@style/tvTitle"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        app:layout_constraintStart_toEndOf="@+id/imgGuestLogo"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgGuestLogo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_menus" />

    <EditText
        android:id="@+id/etGuestLogin"
        style="@style/etStyle"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/username_text"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnGuestLogin"
        style="@style/btnStyleLongGray"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="loginGuest"
        android:text="@string/login_text"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="@+id/etGuestLogin"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <Button
        android:id="@+id/btnGuestCancel"
        style="@style/btnStyleLongGray"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:onClick="cancelLogin"
        android:text="@string/cancel_text"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/etGuestLogin"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/tvGuestLoginInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/loading_ad_text"
        android:textStyle="italic"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btnGuestLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnGuestLogin" />
</android.support.constraint.ConstraintLayout>
